--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="uk-child-width-expand@s uk-margin-large-top" uk-grid>
-  
+
   <div class="rx-splash">
     <ul class="readux-home-tagline uk-padding-remove-left">
       <li>Read.</li>
@@ -15,129 +15,136 @@
     <img src="static/images/ecds.svg" class="readux-home-ecds">
   </div>
 
-
-<div class="">
-<!-- <h1>{{page.title}}</h1>
-<p class="lead">{{page.tagline}}</p> -->
-
-{% if page.featured_collections.all|length != 0  %}
-<h2>Featured Collection{{page.featured_collections.all|length|pluralize}}</h2>
-<ol>
-  {% for collection in page.featured_collections.all|order_by:page.featured_collections_sort_order %}
-  <li>
-    <div>
-      <img src="media/{{collection.thumbnail}}" alt="Thumbnail image for collection {{collection.label}}" /><br />
-      <a class="nav-link" href="{% url 'collection' collection.pid %}">
-        {{ collection.label }}
-      </a>
-      {{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}
-    </div>
-  </li>
-  {% endfor %}
-</ol>
-{% endif %}
-
-{% if page.featured_volumes.all|length != 0 %}
-<h2>Featured Volume{{page.featured_volumes.all|length|pluralize}}</h2>
-<ol>
-  {% for volume in page.featured_volumes.all|order_by:page.featured_volumes_sort_order %}
-  <li class="list">
-    <div>
-      <div id="grid">
-        <div id="grid-image">
-          <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-            <img src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}" alt="First page of {{volume.label}}"
-              onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';" />
-          </a></div>
-        <div id="grid-metaforimage">
-          <p>
-            <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-
-              <p>{{ volume.label|truncatechars:200 }}</p>
-            </a><br />
-            Author: {{volume.author|truncatechars:100}}<br />
-            Date Published: {{volume.published_date}}<br />
-            Added {{volume.created_at}}</p>
-        </div>
-      </div>
-    </div>
-  </li>
-  {% endfor %}
-</ol>
-{% endif %}
-
-{% if page.content_display == 'Collections' %}
-<div class="readux-group-title">All Collections</div>
-
-<ul class="uk-padding-remove-left">
-  {% for collection in page.collections %}
-  <li>
-    
-
-      <article class="rx-article">
-        <div class="rx-card-image-container">
-          <a alt="Banner image for collection {{collection.label}}" class="rx-card-image" style="background-image: url('https://127.0.0.1:3000/media/{{collection.header}}'); // background-position: 77% 52% !important;"></a>
-        </div>
-        <div class="rx-card-body">
-          <a class="nav-link" href="{% url 'collection' collection.pid %}">
-          <h3 class="rx-card-title uk-margin-remove-bottom">{{ collection.label }}</h3>
-          <div class="rx-title-tagline">{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}
+  <div>
+    {% if page.featured_collections.all|length != 0  %}
+    <div class="readux-group-title">Featured Collection{{page.featured_collections.all|length|pluralize}}</div>
+    <ul class="uk-padding-remove-left">
+      {% for collection in page.featured_collections.all|order_by:page.featured_collections_sort_order %}
+      <li>
+        <article class="rx-article">
+          <div class="rx-card-image-container">
+            <a alt="Thumbnail image for collection {{collection.label}}" class="rx-card-image"
+              href="{% url 'collection' collection.pid %}"
+              style="background-image: url('https://127.0.0.1:3000/media/{{collection.thumbnail}}'); // background-position: 77% 52% !important;"></a>
           </div>
-          <p class="rx-card-text">{{ collection.summary }}</p>
-          </a>
-        </div>
-      </article>
-
-     
-  </li>
-  {% endfor %}
-</ul>
-{% endif %}
-
-{% if page.content_display == 'Volumes' %}
-<h2>All Volumes</h2>
-<ol>
-  {% for volume in page.volumes %}
-  {% if volume.canvas_set.first.pid is null %}
-    <li class="list">
-    <div><div id="grid"><div id="grid-image-volume">
-        <img src='{% static 'images/image_not_found.jpg' %}'/>
-      </div><div id="grid-metaforimage">
-      <p>
-      <p>{{ volume.label|truncatechars:200 }}</p>
-  Author: {{volume.author|truncatechars:150}}<br/>
-  Date Published: {{volume.published_date}}<br/>
-  Added {{volume.created_at}}</p></div>
-    </div></div>
-  </li>
-  {% else %}
-  <li class="list">
-    <div>
-      <div id="grid">
-        <div id="grid-image">
-          <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-            {% for canvas in volume.canvas_set.all %}{% if canvas.is_starting_page == 1 %}<img
-              src="{{ canvas.thumbnail_crop_tallwide }}" {% elif forloop.last %}<img
-              src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}"
-              {% endif %}{% endfor %}alt="First page of {{volume.label}}"
-              onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';" />
-          </a></div>
-        <div id="grid-metaforimage">
-          <p>
-            <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
-              <p>{{ volume.label|truncatechars:200 }}</p>
+          <div class="rx-card-body">
+            <a class="nav-link" href="{% url 'collection' collection.pid %}">
+              <h3 class="rx-card-title uk-margin-remove-bottom">{{ collection.label }}</h3>
+              <div class="rx-title-tagline">{{collection.manifests.all|length}}
+                volume{{collection.manifests.all|length|pluralize}}
+              </div>
+              <p class="rx-card-text">{{ collection.summary }}</p>
             </a>
-            Author: {{volume.author|truncatechars:150}}<br />
-            Date Published: {{volume.published_date}}<br />
-            Added {{volume.created_at}}</p>
-        </div>
-      </div>
-    </div>
-  </li>
-  {% endif %}
-  {% endfor %}
-</ol>
-{% endif %}
+          </div>
+        </article>
+      </li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% if page.featured_volumes.all|length != 0 %}
+    <div class="readux-group-title">Featured Volume{{page.featured_volumes.all|length|pluralize}}</div>
+      {% for volume in page.featured_volumes.all|order_by:page.featured_volumes_sort_order %}
+      <li>
+        <article class="rx-article">
+          <div class="rx-card-image-container">
+            <a alt="First page of {{volume.label}}" class="rx-card-image"
+              href="{% url 'page' volume.pid volume.canvas_set.first.pid %}"
+              style="background-image: url('{{ volume.canvas_set.first.thumbnail_crop_tallwide }}'); // background-position: 77% 52% !important;"></a>
+          </div>
+          <div class="rx-card-body">
+            <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
+              <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:200 }}</h3>
+              <div class="rx-title-tagline">TBD
+              </div>
+              <p class="rx-card-text">Author: {{volume.author|truncatechars:100}}<br />
+              Date Published: {{volume.published_date}}<br />
+              Added {{volume.created_at}}</p>
+            </a>
+          </div>
+        </article>
+      </li>
+      {% endfor %}
+    {% endif %}
+
+    {% if page.content_display == 'Collections' %}
+    <div class="readux-group-title">All Collections</div>
+
+    <ul class="uk-padding-remove-left">
+      {% for collection in page.collections %}
+      <li>
+        <article class="rx-article">
+          <div class="rx-card-image-container">
+            <a alt="Banner image for collection {{collection.label}}" class="rx-card-image"
+              style="background-image: url('https://127.0.0.1:3000/media/{{collection.header}}'); // background-position: 77% 52% !important;"></a>
+          </div>
+          <div class="rx-card-body">
+            <a class="nav-link" href="{% url 'collection' collection.pid %}">
+              <h3 class="rx-card-title uk-margin-remove-bottom">{{ collection.label }}</h3>
+              <div class="rx-title-tagline">{{collection.manifests.all|length}}
+                volume{{collection.manifests.all|length|pluralize}}
+              </div>
+              <p class="rx-card-text">{{ collection.summary }}</p>
+            </a>
+          </div>
+        </article>
+      </li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% if page.content_display == 'Volumes' %}
+    <div class="readux-group-title">All Volumes</div>
+      {% for volume in page.volumes %}
+      {% if volume.canvas_set.first.pid is null %}
+      <li>
+        <article class="rx-article">
+          <div class="rx-card-image-container">
+            <img class="rx-card-image" src="{% static 'images/image_not_found.jpg' %}" />
+          </div>
+          <div class="rx-card-body">
+            <a class="nav-link" href="{% url 'collection' collection.pid %}">
+              <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:200 }}</h3>
+              <div class="rx-title-tagline">TBD
+              </div>
+              <p class="rx-card-text">Author: {{volume.author|truncatechars:150}}<br />
+              Date Published: {{volume.published_date}}<br />
+              Added {{volume.created_at}}</p>
+            </a>
+          </div>
+        </article>
+      </li>
+      
+      {% else %}
+      <li>
+        <article class="rx-article">
+          <div class="rx-card-image-container">
+            <a alt="Banner image for collection {{collection.label}}" class="rx-card-image" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}"
+              style="background-image: url('{{ volume.canvas_set.first.thumbnail_crop_tallwide }}'); // background-position: 77% 52% !important;"></a>
+          </div>
+          <div class="rx-card-body">
+            <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
+              <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:200 }}</h3>
+              <div class="rx-title-tagline">TBD
+              </div>
+              <p class="rx-card-text">Author: {{volume.author|truncatechars:150}}<br />
+              Date Published: {{volume.published_date}}<br />
+              Added {{volume.created_at}}</p>
+            </a>
+          </div>
+        </article>
+      </li>
+
+              <!-- <a class="nav-link" href="{% url 'page' volume.pid volume.canvas_set.first.pid %}">
+                {% for canvas in volume.canvas_set.all %}{% if canvas.is_starting_page == 1 %}<img
+                  src="{{ canvas.thumbnail_crop_tallwide }}" {% elif forloop.last %}<img
+                  src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}"
+                  {% endif %}{% endfor %}alt="First page of {{volume.label}}"
+                  onerror="this.onerror=null;this.src='{% static 'images/image_not_found.jpg' %}';" />
+              </a></div> -->
+      {% endif %}
+      {% endfor %}
+    {% endif %}
 
 
 
