--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -55,10 +55,18 @@
         <span uk-search-icon></span>
         <input class="uk-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="q"
           value="{{request.GET.q}}">        
-        <span style="margin-top: 10px;" title="Click to include partial matches">Partial</span>
+        <span style="margin-top: 10px;" title="Click to include partial matches" class="tooltip">Partial<span class="tooltiptext">Searches for your term within any word (end matches end and bend). More specific words work better.</span></span>
+        {% if "exact" in request.GET.type %}
+        <input type="radio" style="margin-top: 6px;" name="type" aria-label="include partial" value="partial">
+        {% else %}
         <input type="radio" style="margin-top: 6px;" name="type" aria-label="include partial" value="partial" checked>
-        <span style="margin-top: 10px;" title="Click for exact matches only">Exact</span>
+        {% endif %}
+        <span style="margin-top: 10px;" title="Click for exact matches only" class="tooltip">Exact<span class="tooltiptext">Searches for your exact term and stems the ending (ends matches end, ends, ended).</span></span>
+        {% if "exact" in request.GET.type %}
+        <input type="radio" style="margin-top: 6px;" name="type" aria-label="exact only" value="exact" checked>
+        {% else %}
         <input type="radio" style="margin-top: 6px;" name="type" aria-label="exact only" value="exact">
+        {% endif %}
         <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
       </form>
       {% else %}
@@ -91,8 +99,8 @@
                 <ul class="uk-padding-remove">
                   {% for answer in qs1 %}{% if answer.canvas__manifest__label in volume.label %}
                   <li><a
-                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas__pid }}"
-                      target="_blank">Canvas {{ answer.canvas__position }} - number of results {{ answer.canvas__position__count }}{{ answer.rank }}</a></li>
+                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas__pid }}?q={{ request.GET.q }}&type={{ request.GET.type }}"
+                      target="">Canvas {{ answer.canvas__position }} - number of results {{ answer.canvas__position__count }}{{ answer.rank }}</a></li>
                   {% endif %}{% endfor %}</ul>
                 {% elif request.GET.q  and not qs1 %}
                 <p>No results in the text in this volume</p>{% endif %}
@@ -102,8 +110,8 @@
                 <ul class="uk-padding-remove">
                   {% for answer in qs2 %}{% if answer.canvas.manifest.label in volume.label %}
                   <li><a
-                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas.pid }}"
-                      target="_blank">Canvas {{ answer.canvas.position }}</a></li>
+                       href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas.pid }}?q={{ request.GET.q }}&type={{ request.GET.type }}"
+                       target="">Canvas {{ answer.canvas.position }}</a></li>
                   {% endif %}{% endfor %}</ul>
                 {% elif request.GET.q  and not qs2 %}<p>No results in your annotations in this volume</p>
                 {% endif %}
@@ -229,7 +237,7 @@
           url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all">
         </v-info-content-url-single>
 
-        {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
+         {% if "/page/all" in request.get_full_path in request.get_full_path %}
           <v-info-content-url-external
             ref="rx-url-canvas" v-show="false">
           </v-info-content-url-external>
@@ -299,7 +307,7 @@
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',{% endif %}
         displayLayout: false,
         sidePanel: false,
-        {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
+        {% if "/page/all" in request.get_full_path in request.get_full_path %}
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ volume.pid }}/canvas/{{ volume.canvas_set.pid.first }}',
         viewType: "ThumbnailsView"
         {% endif %}
